fix the navbar overlapping

--- a/src/pages/portfolio/portfolio.css
+++ b/src/pages/portfolio/portfolio.css
@@ -1,6 +1,9 @@
 .portfolio__container {
     grid-template-columns: repeat(3, 1fr);
 }
+.section{
+    z-index: 4;
+}
 
 .portfolio__item {
     position: relative;
@@ -101,4 +104,17 @@
 
 .item__details{
     font-size: var(--weight-6 00);
+}
+
+@media screen and (min-width:1024px) {
+    .portfolio__container {
+       padding:6rem ;
+    }
+    
+}
+@media screen and (min-width:1024px) {
+    .portfolio__container {
+       padding:6rem ;
+    }
+    
 }
